# simple

./: .clang-format  .gitignore  CMakeLists.txt  SimpleTest.sln  doxygen.ini  readme.md
Convert/: Convert.cs
Convert/Properties/: AssemblyInfo.cs
ModelView/: ChangeMaterial.Designer.cs  ChangeMaterial.cs  GlDraw.cs  ModelView.csproj  Rotation.cs
ModelView/Properties/: Settings.Designer.cs
SimpleEngine/: Actor.cs  ActorFile.cs  AnimationFile.cs  Ckey.cs  Entity.cs  Fbo.cs  FileSystem.cs  FileUtil.cs  FullscreenQuad.cs  Main.cs  MatrixHelper.cs  Mesh.cs  MeshDef.cs  MeshFile.cs  PushedMatrix.cs  Rect.cs  RenderFrame.cs  Shader.cs  SimpleEngine.csproj  Strings.cs  World.cs  Xml.cs  angle.cs  mat33.cs  quat.cs
SimpleEngine/Properties/: AssemblyInfo.cs
SimpleEngine/fse/: Provider.cs  RenderArgs.cs  Target.cs
SimpleEngine/fse/Commands/: BindBufferCommand.cs
SimpleEngine/fse/Providers/: RenderWorldProvider.cs
SimpleEngine/fse/Targets/: BufferTarget.cs  FormTarget.cs
SimpleEngine/fse/old/: Component.cs  RenderTarget.cs  ShaderComponent.cs  User.cs
SimpleEngine/load/: MilkshapeAscii.cs  MilkshapeBinary.cs  MilkshapeCommon.cs
SimpleEngine/load/studio3ds/: BinaryChunk.cs  ChunkId.cs  MainChunk.cs  MaterialChunk.cs  StringChunk.cs  TriMeshChunk.cs
SimpleTest/: Main.Designer.cs  SimpleTest.cs  SimpleTest.csproj
SimpleTest/Properties/: AssemblyInfo.cs  Resources.Designer.cs
SimpleUnit/: SimpleUnit.csproj
cmake/modules/: FindSDL2.cmake
data/: 360 spin.anm  Backflip.anm  Bite attack.anm  Die onto back.anm  Go into Shell.anm  Idle 1.anm  Jump.anm  Swim.anm  Walk.anm  depth.xml  fse_blurs.xml  fse_bw.xml  fse_detectlines.xml  fse_ssao.xml  fse_tomiddle.xml  idle 2.anm  level01.lvl  normal.xml  pipeline.xml  pipeline_basic.xml  pipeline_ssao.xml  shader.xml  spot_triangulated.mtl  turtle.act  turtle.mdf  turtle.xml
examples/: CMakeLists.txt
examples/convert/: Convert.csproj  main.cc
examples/demo/: CMakeLists.txt  demo.cc  demo.h  main.cc
examples/demo/Properties/: Settings.Designer.cs
examples/viewer/: CMakeLists.txt  GlDraw.Designer.cs  Main.Designer.cs  Main.resx  changematerial.cc  changematerial.designer.cc  gldraw.cc  gldraw.designer.cc  main.cc  main.designer.cc  program.cc  rotation.cc  viewer.cc  viewer.h
examples/viewer/Properties/: AssemblyInfo.cs  Resources.Designer.cs
src/: CMakeLists.txt
src/engine/: ArcBall.cs  CSharp.cs  Camera.cs  CompiledMesh.cs  Counter.cs  Handle.cs  Media.cs  MeshPart.cs  RandomSelectList.cs  RenderList.cs  Setup.cs  SimpleWorld.cs  StringSeperator.cs  UserException.cs  actor.cc  actor.h  actorfile.cc  actorfile.h  angle.cc  angle.h  animation.cc  animation.h  animationfile.cc  animationfile.h  arcball.cc  arcball.h  axisangle.cc  axisangle.h  camera.cc  camera.h  ckey.cc  ckey.h  compiledmesh.cc  compiledmesh.h  configurablekey.cc  configurablekey.h  counter.cc  cpp.cc  cpp.h  csharp.cc  (+93 more)
src/engine/fse/: Binder.cs  BufferReference.cs  binder.cc  binder.h  bufferreference.cc  bufferreference.h  command.bindbuffer.cc  command.bindbuffer.h  command.cc  command.commands.cc  command.commands.h  command.h  command.setvec2uniform.cc  command.setvec2uniform.h  linker.cc  linker.h  map.cc  map.h  pipeline.cc  pipeline.h  provider.cc  provider.h  provider.providers.cc  provider.providers.h  provider.renderfullscreen.cc  provider.renderfullscreen.h  provider.renderworld.cc  provider.renderworld.h  renderargs.cc  renderargs.h  target.buffer.cc  target.buffer.h  target.cc  target.form.cc  target.form.h  target.h  target.targets.cc  target.targets.h
src/engine/fse/Commands/: Commands.cs  SetVec2Uniform.cs
src/engine/fse/Providers/: Providers.cs  RenderFullscreenProvider.cs
src/engine/fse/old/: CompositeComponent.cs  Effect.cs  RenderArgs.cs
src/engine/load/: Binary.cc  Binary.cs  Loader_3ds.cc  MilkshapeAscii.cc  MilkshapeBinary.cc  MilkshapeCommon.cc  milkshape.ascii.cc  milkshape.ascii.h  milkshape.binary.cc  milkshape.binary.h  milkshape.common.cc  milkshape.common.h
src/engine/load/studio3ds/: BinaryChunk.cc  ChunkId.cc  ColorChunk.cc  Editor3dChunk.cc  FaceMaterialChunk.cc  LocalCoordinateSystemChunk.cc  MainChunk.cc  MaterialChunk.cc  ObjectChunk.cc  StringChunk.cc  TriMeshChunk.cc
src/test/: Test.cs  TestMat44.cs  test.cc  test.h  testangle.cc  testmat33.cc  testmat44.cc  testquat.cc  testvec.cc
src/test/Properties/: AssemblyInfo.cs
tools/: clang.py  windows.py
tools/buildtools/: deps.py
